# Pierce

./: .gitignore  Pierce.cabal
01ArithUntyped/: Ast.hs  Evaluator.hs  Lexer.x  Parser.y  Test.hs
02LambdaUntyped/: Bruijn.hs  Converter.hs  Evaluator.hs  Lexer.x  Named.hs  Parser.y  Test.hs
app/: Main.hs
tapl/ArithUnt/: Ast.hs  Evaluator.hs  Lexer.x  Parser.y  Test.hs
tapl/ArithUntyped/: Ast.hs  Lexer.x  Parser.y  Test.hs
tapl/Common/: Evaluator.hs
tapl/LambUnt/: Bruijn.hs  Converter.hs  Evaluator.hs  Lexer.x  Named.hs  Parser.y  Test.hs
tapl/LambdaComonad/: Ast.hs  Convert.hs  Lexer.x  Parser.y  Test.hs  Typechecker.hs  input.lang
tapl/LambdaTyped/: Ast.hs  Convert.hs  Lexer.x  Parser.y  Test.hs  Typechecker.hs  input.lang
tapl/LambdaUntyped/: Bruijn.hs  Convert.hs  Lexer.x  Named.hs  Parser.y  Test.hs
