cabal-version:      3.0
name:               Pierce
version:            0.1.0.0
license:            BSD-3-Clause
author:             flavio
maintainer:         flavioborinjunior@gmail.com
build-type:         Simple

common general
  ghc-options: -Wall
  build-depends:
    base ^>=4.18.3.0
    , array
    , mtl
  build-tool-depends: happy:happy, alex:alex

library 01ArithUntyped
  import : general

  hs-source-dirs: 01ArithUntyped

  other-modules:
    Lexer
    Parser
    Ast
    Evaluator

  exposed-modules: 
    Test

  default-language: Haskell2010

library 02LambdaUntyped
  import : general

  hs-source-dirs: 02LambdaUntyped

  other-modules:
    Lexer
    Parser
    Named
    Converter
    Bruijn
    Evaluator

  exposed-modules:
    Test

  default-language: Haskell2010


executable Pierce
    import:           general
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, 02LambdaUntyped
    hs-source-dirs:   app
    default-language: Haskell2010
