cabal-version:      3.0
name:               Pierce
version:            0.1.0.0
license:            BSD-3-Clause
author:             flavio
maintainer:         flavioborinjunior@gmail.com
build-type:         Simple

common general
  ghc-options: -Wall


library tapl
  import : general
  
  build-depends:
    base ^>=4.18.3.0
    , array
    , mtl
    , comonad
  
  hs-source-dirs: tapl 

  build-tool-depends: happy:happy, alex:alex
  
  default-language: Haskell2010

  other-modules:
    Common.Evaluator

    ArithUntyped.Ast
    ArithUntyped.Lexer
    ArithUntyped.Parser

    LambdaUntyped.Bruijn
    LambdaUntyped.Convert
    LambdaUntyped.Lexer
    LambdaUntyped.Named
    LambdaUntyped.Parser

    LambdaComonad.Ast
    LambdaComonad.Convert
    LambdaComonad.Typechecker
    LambdaComonad.Parser
    LambdaComonad.Lexer

  exposed-modules: 
    ArithUntyped.Test
    LambdaUntyped.Test
    LambdaComonad.Test


executable Pierce
    import:           general
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, tapl
    hs-source-dirs:   app
    default-language: Haskell2010

